--- a/package.json
+++ b/package.json
@@ -3,13 +3,40 @@
   "type": "module",
   "version": "0.0.1",
   "scripts": {
-    "dev": "astro dev",
+    "dev": "tinacms dev -c \"astro dev\"",
     "start": "astro dev",
     "build": "astro check && astro build",
     "preview": "astro preview",
+    "format": "prettier -w --plugin-search-dir=. .",
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.1.2"
+    "@astrojs/check": "^0.4.1",
+    "@astrojs/mdx": "^2.0.4",
+    "@astrojs/react": "^3.0.9",
+    "@astrojs/sitemap": "^3.0.4",
+    "@astrojs/tailwind": "^5.1.0",
+    "@iconify-json/tabler": "^1.1.104",
+    "@tailwindcss/typography": "^0.5.10",
+    "@types/react": "^18.2.48",
+    "@types/react-dom": "^18.2.18",
+    "astro": "^4.1.2",
+    "astro-icon": "^1.0.2",
+    "astro-robots-txt": "^1.0.0",
+    "marked": "^11.1.1",
+    "prettier-plugin-astro-organize-imports": "^0.3.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^3.4.1",
+    "tinacms": "^1.5.28",
+    "typescript": "^5.3.3"
+  },
+  "devDependencies": {
+    "@tinacms/cli": "^1.5.39",
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "@types/node": "^20.11.2",
+    "prettier": "^3.2.2",
+    "prettier-plugin-astro": "^0.12.3",
+    "prettier-plugin-tailwindcss": "^0.5.11"
   }
 }
