--- a/.github/workflows/build_ssh.yml
+++ b/.github/workflows/build_ssh.yml
@@ -40,9 +40,7 @@ jobs:
       - name: Run build task
         run: npm run build
         env:
-          SITE_URL: ${{ secrets.SITE_URL }}
-          MATOMO_URL: ${{ secrets.MATOMO_URL }}
-          MATOMO_SITE_ID: ${{ secrets.MATOMO_SITE_ID }}
+          SITE_URL: ${{ vars.SITE_URL }}
 
       - name: Deploy to Server via ssh key
         uses: easingthemes/ssh-deploy@v4.0.5
@@ -50,7 +48,7 @@ jobs:
           SSH_PRIVATE_KEY: ${{ secrets.SERVER_SSH_KEY }}
           ARGS: "-rltgoDzvO --delete"
           SOURCE: "dist/"
-          REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
-          REMOTE_USER: ${{ secrets.REMOTE_USER }}
-          TARGET: ${{ secrets.REMOTE_TARGET }}
+          REMOTE_HOST: ${{ vars.REMOTE_HOST }}
+          REMOTE_USER: ${{ vars.REMOTE_USER }}
+          TARGET: ${{ vars.REMOTE_TARGET }}
           SCRIPT_BEFORE: whoami
