--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "tinacms dev -c \"astro dev\"",
     "start": "astro dev",
-    "build": "astro build",
+    "build": "tinacms build --local --skip-cloud-checks && astro build",
     "build:check": "astro check && astro build",
     "preview": "astro preview",
     "format": "prettier -w --plugin-search-dir=. .",
