feat: update publish configuration

--- a/.github/workflows/build_ssh.yml
+++ b/.github/workflows/build_ssh.yml
@@ -41,14 +41,21 @@ jobs:
         run: npm run build
         env:
           SITE_URL: ${{ vars.SITE_URL }}
-
-      - name: Deploy to Server via ssh key
-        uses: easingthemes/ssh-deploy@v4.0.5
-        env:
-          SSH_PRIVATE_KEY: ${{ secrets.SERVER_SSH_KEY }}
-          ARGS: "-rltgoDzvO --delete"
-          SOURCE: "dist/"
-          REMOTE_HOST: ${{ vars.REMOTE_HOST }}
-          REMOTE_USER: ${{ vars.REMOTE_USER }}
-          TARGET: ${{ vars.REMOTE_TARGET }}
-          SCRIPT_BEFORE: whoami
+      - name: 📂 Sync files
+        uses: SamKirkland/FTP-Deploy-Action@v4.3.4
+        with:
+          server: ${{ vars.REMOTE_HOST }}
+          username: ${{ vars.REMOTE_USER }}
+          password: ${{ secrets.ftp_password }}
+          local-dir: ./dist/
+          server-dir: ${{ vars.REMOTE_TARGET }}
+      # - name: Deploy to Server via ssh key
+      #   uses: easingthemes/ssh-deploy@v4.0.5
+      #   env:
+      #     SSH_PRIVATE_KEY: ${{ secrets.SERVER_SSH_KEY }}
+      #     ARGS: "-rltgoDzvO --delete"
+      #     SOURCE: "dist/"
+      #     REMOTE_HOST: ${{ vars.REMOTE_HOST }}
+      #     REMOTE_USER: ${{ vars.REMOTE_USER }}
+      #     TARGET: ${{ vars.REMOTE_TARGET }}
+      #     SCRIPT_BEFORE: whoami
